--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>task_list</title>
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="../assets/giphy.gif" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
